@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.3-2
-Date: 2022-12-11
+Date: 2022-12-12
 Title: Genetic Analysis Package
 Authors@R: c(person("Jing Hua", "Zhao", role = c("aut", "cre"),
                     email = "jinghuazhao@hotmail.com",
