@@ -44,6 +44,7 @@ export(h2GE)
 export(h2_mzdz)
 export(h2l)
 export(hap)
+export(hap.control)
 export(hap.em)
 export(hap.score)
 export(hmht.control)
