@@ -24,30 +24,7 @@ hap(
 
 \item{names}{locus names.}
 
-\item{control}{is a function with the following arguments,
-\enumerate{
-\item mb Maximum dynamic storage to be allocated, in Mb
-\item pr Prior (ie population) probability threshold
-\item po Posterior probability threshold
-\item to Log-likelihood convergence tolerance
-\item th Posterior probability threshold for output
-\item maxit Maximum EM iteration
-\item n Force numeric allele coding (1/2) on output (off)
-\item ss Tab-delimited speadsheet file output (off)
-\item rs Random starting points for each EM iteration (off)
-\item rp Restart from random prior probabilities
-\item ro Loci added in random order (off)
-\item rv Loci added in reverse order (off)
-\item sd Set seed for random number generator (use date+time)
-\item mm Repeat final maximization multiple times
-\item mi Create multiple imputed datasets. If set >0
-\item mc  Number of MCMC steps between samples
-\item ds  Starting value of Dirichlet prior parameter
-\item de  Finishing value of Dirichlet prior parameter
-\item q Quiet operation (off)
-\item hapfile a file for haplotype frequencies
-\item assignfile a file for haplotype assignment
-}}
+\item{control}{is a call to hap.control().}
 }
 \value{
 The returned value is a list containing:
