@@ -1,7 +1,9 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.3-2
-11-12-2022	Simplify miamiplot2 code
+12-12-2022	Simplify miamiplot2 code
+		Replace sprintf with snprintf according to https://developer.r-project.org/blosxom.cgi/R-devel/2022/12/04
+		Document and export hap.control()
 
 Version 1.3-1
 20-10-2022	Remove README.md and mask miamiplot2 example
